--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
     "react-data-table-component": "^7.7.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.5.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
