--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.1.0",
     "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
     "react": "^18.2.0",
     "react-data-table-component": "^7.7.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.5.3",
     "react-select": "^5.10.1"
