--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@mui/material": "^7.1.0",
     "bootstrap": "^5.3.3",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
+    "luxon": "^3.6.1",
     "react": "^18.2.0",
     "react-data-table-component": "^7.7.0",
     "react-datepicker": "^8.3.0",
