--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-datepicker": "^8.4.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.5.3",
-    "react-select": "^5.10.1"
+    "react-select": "^5.10.1",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
