--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
-    "bootstrap": "^5.3.3",
+    "bootstrap": "^5.3.6",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "luxon": "^3.6.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.10",
     "react-data-table-component": "^7.7.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^18.2.0",
