--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactambiental",
+  "name": "y",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -35,6 +35,18 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.2.0"
-  }
+    "vite": "^6.3.5"
+  },
+  "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
+  "main": "vite.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/LuisDuarte29/ReactAmbiental.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/LuisDuarte29/ReactAmbiental/issues"
+  },
+  "homepage": "https://github.com/LuisDuarte29/ReactAmbiental#readme"
 }
